// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatter snapshots > matches convertToHtml output 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8" />
<meta name="viewport" content="width=device-width, initial-scale=1" />
<title>Snapshot Doc</title>
<style>
  body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif; max-width: 900px; margin: 2rem auto; padding: 0 1rem; color: #24292f; line-height: 1.6; overflow-wrap: anywhere; }
  h1, h2, h3, h4 { margin-top: 1.5em; }
  pre { background: #f6f8fa; padding: 1em; border-radius: 6px; overflow-x: auto; }
  code { font-family: "SFMono-Regular", Consolas, monospace; font-size: 0.9em; }
  :not(pre) > code { white-space: pre-wrap; background: #f6f8fa; padding: 0.2em 0.4em; border-radius: 3px; }
  .table-scroll { max-width: 100%; overflow-x: auto; margin: 1em 0; }
  table { border-collapse: collapse; width: 100%; overflow-wrap: normal; }
  pre:focus-visible, .table-scroll:focus-visible { outline: 2px solid #0969da; outline-offset: 2px; }
  th, td { border: 1px solid #d0d7de; padding: 0.5em 1em; text-align: left; }
  th { background: #f6f8fa; }
  blockquote { border-left: 4px solid #d0d7de; margin: 1em 0; padding: 0.5em 1em; color: #57606a; }
  hr { border: none; border-top: 1px solid #d0d7de; margin: 2em 0; }
  a { color: #0969da; text-decoration: none; }
  a:hover { text-decoration: underline; }
  img { max-width: 100%; }
  .mermaid { overflow-x: auto; }
  details { margin: 0.5em 0; }
  summary { cursor: pointer; }
  @media print {
    .table-scroll { overflow: visible; }
    table { table-layout: fixed; }
    th, td { overflow-wrap: anywhere; }
    pre { white-space: pre-wrap; overflow: visible; }
  }
</style>
</head>
<body>
<h1 id="snapshot-title">Snapshot Title</h1>
<blockquote>Snapshot quote</blockquote>
<ul>
<li>☐ todo item</li>
<li>☑ done item</li>
</ul>
<div class="table-scroll" tabindex="0" role="region" aria-label="Scrollable table"><table>
<tr><th>Name</th><th>Value</th></tr>
<tr><td>alpha</td><td>beta</td></tr>
</table></div>
<pre tabindex="0" role="region" aria-label="Code block"><code class="language-typescript">const answer = 42;</code></pre>
<div class="mermaid">
graph LR
A--&gt;B
</div>

<script type="module">
  import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs";
  mermaid.initialize({ startOnLoad: true });
</script>
</body>
</html>"
`;

exports[`formatter snapshots > matches convertToPdf output 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8" />
<meta name="viewport" content="width=device-width, initial-scale=1" />
<title>Snapshot Doc</title>
<style>
  @page { size: A4; margin: 2cm; }
  body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif; max-width: 100%; color: #24292f; line-height: 1.6; font-size: 11pt; }
  h1, h2, h3, h4 { margin-top: 1.5em; page-break-after: avoid; }
  pre { background: #f6f8fa; padding: 1em; border-radius: 6px; overflow-x: auto; page-break-inside: avoid; }
  code { font-family: "SFMono-Regular", Consolas, monospace; font-size: 0.9em; }
  :not(pre) > code { white-space: pre-wrap; background: #f6f8fa; padding: 0.2em 0.4em; border-radius: 3px; }
  table { border-collapse: collapse; width: 100%; margin: 1em 0; page-break-inside: avoid; }
  th, td { border: 1px solid #d0d7de; padding: 0.5em 1em; text-align: left; }
  th { background: #f6f8fa; }
  blockquote { border-left: 4px solid #d0d7de; margin: 1em 0; padding: 0.5em 1em; color: #57606a; }
  hr { border: none; border-top: 1px solid #d0d7de; margin: 2em 0; }
  a { color: #0969da; text-decoration: none; }
  img { max-width: 100%; }
  .mermaid { overflow-x: auto; }
  @media screen {
    .table-scroll { max-width: 100%; overflow-x: auto; }
    .table-scroll:focus-visible { outline: 2px solid #0969da; outline-offset: 2px; }
  }
</style>
</head>
<body>
<h1 id="snapshot-title">Snapshot Title</h1>
<blockquote>Snapshot quote</blockquote>
<ul>
<li>☐ todo item</li>
<li>☑ done item</li>
</ul>
<div class="table-scroll" tabindex="0" role="region" aria-label="Scrollable table"><table>
<tr><th>Name</th><th>Value</th></tr>
<tr><td>alpha</td><td>beta</td></tr>
</table></div>
<pre tabindex="0" role="region" aria-label="Code block"><code class="language-typescript">const answer = 42;</code></pre>
<div class="mermaid">
graph LR
A--&gt;B
</div>

<script type="module">
  import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs";
  mermaid.initialize({ startOnLoad: true });
</script>
</body>
</html>"
`;

exports[`formatter snapshots > matches markdownToHtml output 1`] = `
"<h1 id="snapshot-title">Snapshot Title</h1>
<blockquote>Snapshot quote</blockquote>
<ul>
<li>☐ todo item</li>
<li>☑ done item</li>
</ul>
<div class="table-scroll" tabindex="0" role="region" aria-label="Scrollable table"><table>
<tr><th>Name</th><th>Value</th></tr>
<tr><td>alpha</td><td>beta</td></tr>
</table></div>
<pre tabindex="0" role="region" aria-label="Code block"><code class="language-typescript">const answer = 42;</code></pre>
<div class="mermaid">
graph LR
A--&gt;B
</div>"
`;
